<resources>
    <string name="app_name">Msms</string>

    <string name="click_direction">Click on the Chart to open Debit and Credit SMS</string>
    <string name="total_expenses">Total Expenses</string>
    <string name="total_income">Total Income</string>
    <string name="search_with_tags">Search with Tags</string>
    <string name="search_tag">Search Tag</string>
    <string name="amount_debited_or_credited">Ksh %1$s</string>
    <string name="tag_hint">Tag</string>
    <string name="add_tag_message">Add a single tag which can be used to locate the message</string>
    <string name="done_add_tag">DONE</string>
    <string name="add_tag">Add Tag</string>
    <string name="edit_tag">Edit Tag</string>
    <string name="transaction_summary">Transaction Summary</string>
    <string name="go_back">Go Back</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="create_account">Create account</string>
    <string name="phone_number_prefix">254</string>
    <string name="login_to_your_account_to_continue">Login to your account to continue</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="already_have_an_account">Already have an account?</string>
</resources>